--- a/templates/base.html
+++ b/templates/base.html
@@ -23,13 +23,19 @@
           <li><a href="/stats" class="nav-link px-2 text-white">Stats</a></li>
         </ul>
 
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-          <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
+        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+          {% if current_user %}
+            {{ current_user.login }}
+          {% endif %}
         </form>
 
         <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
-          <button type="button" class="btn btn-warning">Sign-up</button>
+          {% if current_user.is_authenticated %}
+            <a href="/logout" type="button" class="btn btn-danger">Logout</a>
+          {% else %}
+            <a href="/login" type="button" class="btn btn-outline-light me-2">Login</a>
+          {% endif %}
+          <a href="/registration" type="button" class="btn btn-warning">Sign-up</a>
         </div>
       </div>
     </div>
@@ -38,8 +44,8 @@
     <div class="container">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
+      <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
+      <li class="nav-item"><a href="/add_horoscope" class="nav-link px-2 text-body-secondary">Features</a></li>
     </ul>
     <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
   </footer>
