--- a/templates/commands.html
+++ b/templates/commands.html
@@ -1,19 +1,27 @@
 {% extends 'base.html' %}
 
 {% block title %}
-{{ commands_thchat[0].username }}
+{% if messages_thchat|length > 0 %}
+    {{ commands_thchat[0].username }}
+{% else %}
+    No name
+{% endif %}
 {% endblock %}
 
 {% block body %}
 <div class="container mt-5">
-    <h2>{{ commands_thchat[0].username }}</h2>
+    {% if commands_thchat|length > 0 %}
+        <h2>{{ commands_thchat[0].username }}</h2>
 
-    {% for command in commands_thchat %}
-    <div class="alert alert-info">
-        <p>{{ command.command }}</p>
-        <p><b>Дата: {{ command.date.date() }}</b></p>
-    </div>
-    {% endfor %}
+        {% for command in commands_thchat %}
+        <div class="alert alert-info">
+            <p>{{ command.command }}</p>
+            <p><b>Дата: {{ command.date.date() }}</b></p>
+        </div>
+        {% endfor %}
+    {% else %}
+        <h2>Данный пользователь ещё не отправлял команды</h2>
+    {% endif %}
 
 </div>
 {% endblock %}
